--- a/client/styles.css
+++ b/client/styles.css
@@ -2,6 +2,10 @@ body {
     margin: 0;
 }
 
+.main {
+    margin: 8px;
+}
+
 .navbar {
     list-style-type: none;
     margin: 0;
@@ -23,4 +27,15 @@ body {
 
 .navbar-item a:hover {
     background-color: #111;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+td,
+th {
+    border: 1px solid black;
+    padding: 5px;
+}
 }
